syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request.message";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message UpdateMessageRequest {
    int64 message_id = 1;
    google.protobuf.BoolValue is_system_message = 2;
    google.protobuf.StringValue text = 3;
    repeated bytes records = 4;
    google.protobuf.Int64Value recallDate = 5;
    google.protobuf.Int64Value readDate = 6;
}